# hermes-flight-recorder

./: .gitignore  LICENSE  NOTICE  README.md  deploy.sh  pyproject.toml
.claude/skills/: deploy-flight-recorder
docs/: dev-setup.md  poc-demo.md
docs/schema/: envelope-v1.md  ingestion-protocol-v1.md
hermes_dbass/: __init__.py  cli.py  envelope.py  observe.py
hermes_dbass/collector/: _common.py  outbox.py  reconcile.py  state_db.py
hermes_flight_recorder/: __init__.py  cli.py  envelope.py  observe.py
hermes_flight_recorder/collector/: __init__.py  _common.py  cron_db.py  cron_schedule.py  gateway_log.py  kanban_db.py  knowledge_store.py  lifecycle.py  outbox.py  reconcile.py  recorder_config.py  retention.py  runtime_lock.py  serve.py  state_db.py  sync.py  sync_config.py  transport.py
scripts/: _gate.py  cron_death_live_check.py  kanban_live_check.py  knowledge_live_check.py  live_capture_check.py  poc_exit_gate.py  poc_kanban_gate.py  poc_sync_gate.py
systemd/: hermes-flight-recorder-capture.service.in  hermes-flight-recorder-capture.timer.in  hermes-flight-recorder-reconcile.service.in  hermes-flight-recorder-reconcile.timer.in  hermes-flight-recorder-sync.service.in  hermes-flight-recorder-sync.timer.in
tests/: test_capture_backfill.py  test_configure_sync_cli.py  test_envelope.py  test_exit_gate.py  test_gateway_channel.py  test_gateway_log.py  test_home_mode.py  test_home_resolution.py  test_hook_cli.py  test_hook_drain.py  test_hook_durability.py  test_hook_handler.py  test_hook_install.py  test_ingestion_protocol.py  test_install_cli.py  test_invocation_attribution.py  test_kanban_collector.py  test_knowledge_restore.py  test_knowledge_store.py  test_legacy_schema_cron_kanban.py  test_observe.py  test_observe_adversarial.py  test_observe_cli.py  test_observe_integration.py  test_observe_kanban.py  test_observe_knowledge.py  test_observe_load_filter.py  test_observe_report.py  test_observe_stream.py  test_observe_tree_rollup.py  test_observe_tree_struct.py  test_outbox.py  test_reconcile.py  test_reconcile_capture_stale.py  test_reconcile_cli.py  test_reconcile_coverage.py  test_reconcile_cron_expr.py  test_reconcile_gateway.py  test_reconcile_horizon.py  test_reconcile_idempotency.py  (+20 more)
tests/fixtures/: golden_batch.json  golden_event.json
(+4 files in other folders)
