[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hermes-flight-recorder"
version = "0.0.0"
description = "Local-first capture, encryption, buffering, and reconciliation for Hermes agent execution events."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "Solutions Cay", email = "jose@solutionscay.com" }]
keywords = ["hermes", "agents", "observability", "local-first", "control-plane", "execution-ledger"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.11",
  "Topic :: System :: Monitoring",
]
dependencies = ["cryptography>=42"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.urls]
Homepage = "https://github.com/solutionscay/hermes-flight-recorder"
Issues = "https://github.com/solutionscay/hermes-flight-recorder/issues"

[project.scripts]
hermes-flight-recorder = "hermes_flight_recorder.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["hermes_flight_recorder"]
